# CutsceneConverter

./: .gitattributes  .gitignore  CutsceneConverter.cmd  NekoCutsceneConverter.cmd  NekoCutsceneConverter.ps1  README.md  README.txt  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
